Fixed broken unit tests
