# openapi.yaml
@@ -46,32 +46,16 @@ paths:
         content:
           application/json:
             schema:
-              type: "object"
+              type: object
               properties:
-                sender_actor:
-                  type: "string"
-                sender_agent:
-                  type: "string"
-                log_correlation_path:
-                  type: "string"
-                recipient_agent:
-                  type: "string"
-                recipient_actor:
-                  type: "string"
                 message_type:
-                  type: "string"
-                subject:
-                  type: "string"
+                  type: string
                 content:
-                  type: "string"
+                  type: string
               required:
-                - sender_actor
-                - sender_agent
-                - log_correlation_path
-                - recipient_agent
-                - recipient_actor
                 - message_type
-                - subject
+                - content
+
       responses:
         "200":
           description: "OK"
@@ -79,34 +63,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/sendMessageResponse"
-        default:
-          description: "Unexpected error"
-  /get-messages:
-    post:
-      operationId: "getMessages"
-      summary: "Get pending messages"
-      description: "Returns pending messages. Filter by including a JSON object in the request body."
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: "object"
-              properties: {}
-              additionalProperties:
-                type: "string"
-      responses:
-        "200":
-          description: "OK"
-          content:
-            application/json:
-              schema:
-                type: "array"
-                items:
-                  type: "object"
-                  properties: {}
-                  additionalProperties:
-                    type: "string"
         default:
           description: "Unexpected error"
 components:
